# LearnHub

./: .env.sample  Dockerfile  data_groups.json  docker-compose.yaml  dump.rdb  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_payments.py  0003_delete_payments.py  0004_alter_lesson_title_course.py  0005_course_owner.py  0006_lesson_owner.py  0007_subscription.py  0008_payment.py  0010_delete_payment.py
users/: admin.py  models.py  permisions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: cc.py  cp.py  csu.py  cu.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_city_alter_user_email_and_more.py  0003_payments.py  0004_alter_payments_user.py  0005_payment_delete_payments.py  0006_rename_data_payment_date_and_more.py  0007_rename_date_payment_payment_date_and_more.py  0008_alter_payment_payment_method.py
