[tool.poetry]
name = "learnhub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-filter = "^24.2"

[tool.poetry.group.dev.dependencies]
django = "4.2.2"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
djangorestframework = "^3.15.1"
black = "^24.4.2"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
setuptools = "^70.1.0"
django-cors-headers = "^4.4.0"
coverage = "^7.5.4"
stripe = "^9.12.0"
forex-python = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
